# monkas

./: .clang-format  .clang-tidy  .cmake-format.yaml  .coderabbit.yaml  .editorconfig  .gersemirc  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  NetlinkMonitorNlm.cpp  NetlinkMonitorNlm.h  NetworkInterface.cpp  NetworkInterface.h  NetworkInterfaceDescriptor.cpp  NetworkInterfaceDescriptor.h  README.md  RtNetlinkEthernetLinkAndIpAddressMonitor.cpp  RtNetlinkEthernetLinkAndIpAddressMonitor.h  RtnlNetworkMonitor.cpp  RtnlNetworkMonitor.h  main.cpp  monka.cpp  monka.h  typos.toml
.github/: renovate.json5
.github/docker/monkas-github-builder/: Dockerfile  README.md
.github/docker/monkas-github-gcc/: Dockerfile  README.md
.github/workflows/: build-and-test-reusable.yml  build-and-test.yml  ci.yaml  ci.yml  coverity.yml  docker-build.yaml  docker-build.yml  lint-reusable.yml  lint.yml  static-analysis-reusable.yml  static-analysis.yml  typos-reusable.yml  typos.yml
cmake/: spdlog.cmake
ethernet/: Address.cpp  Address.h
examples/: CMakeLists.txt
examples/cli/: CMakeLists.txt  main.cpp
include/monka/ethernet/: Address.h  Address.hpp
include/monka/ip/: Address.h  Address.hpp
include/monka/monitor/: NetworkInterfaceStatusTracker.h  NetworkInterfaceStatusTracker.hpp  RtnlNetworkMonitor.h  RtnlNetworkMonitor.hpp
include/monka/network/: NetworkAddress.h  NetworkAddress.hpp
include/monkas/ethernet/: Address.hpp
include/monkas/ip/: Address.hpp
include/monkas/monitor/: Attributes.hpp  NetworkInterfaceStatusTracker.hpp  NetworkMonitor.hpp  RtnlNetworkMonitor.hpp
include/monkas/network/: Address.hpp  Interface.hpp  NetworkAddress.hpp
include/monkas/observable/: Observable.hpp
include/monkas/util/: FlagSet.hpp
include/monkas/watchable/: Watchable.hpp
ip/: Address.cpp  Address.h
monitor/: RtnlNetworkMonitor.cpp  RtnlNetworkMonitor.h
network/: NetworkAddress.cpp  NetworkAddress.h  NetworkInterface.cpp  NetworkInterfaceStatusTracker.cpp  NetworkInterfaceStatusTracker.h
observable/: Observable.h
src/: CMakeLists.txt
src/ethernet/: Address.cpp  Address.test.cpp
src/ip/: Address.cpp  Address.test.cpp
src/monitor/: Attributes.cpp  Attributes.hpp  NetworkInterfaceStatusTracker.cpp  NetworkInterfaceStatusTracker.test.cpp  NetworkMonitor.cpp
src/monka/: CMakeLists.txt
src/monka/ethernet/: Address.cpp  Address.test.cpp
src/monka/ip/: Address.cpp  Address.test.cpp
src/monka/monitor/: NetworkInterfaceStatusTracker.cpp  RtnlNetworkMonitor.cpp
src/monka/network/: NetworkAddress.cpp  NetworkAddress.test.cpp
src/monka/observable/: Observable.h  Observable.hpp  Observable.test.cpp
src/monkas/: CMakeLists.txt
src/monkas/ethernet/: Address.cpp  Address.test.cpp
src/monkas/ip/: Address.cpp  Address.test.cpp
src/monkas/monitor/: NetworkInterfaceStatusTracker.cpp  RtnlNetworkMonitor.cpp
src/monkas/network/: Address.cpp  Address.test.cpp  Interface.cpp  NetworkAddress.cpp  NetworkAddress.test.cpp
src/monkas/observable/: Observable.test.cpp
src/monkas/watchable/: Watchable.test.cpp
src/network/: Address.cpp  Address.test.cpp  Interface.cpp  Interface.test.cpp
src/overloaded/: Overloaded.hpp
src/watchable/: Watchable.test.cpp
tests/: dummy-things.sh  monkas.sh
